--- a/index.html
+++ b/index.html
@@ -31,9 +31,17 @@
 					<img src="assets/images/logo.svg" alt="" class="w-14 h-auto">
 					<img src="assets/images/logo-text.svg" alt="" class="w-20">
 				</div>
+
 				<div class="closeBTN flex justify-center items-center text-[#2F3C4A] text-xl w-[40px] h-[40px] border-2 border-[#2F3C4A] rounded-[50%] cursor-pointer">
 					<i class="fa-solid fa-xmark"></i>
 				</div>
+			</div>
+			<div class="border border-[#C4CCD4] flex items-center bg-[#E2E5E9] p-[3px] gap-x-1">
+				<input type="text" placeholder="Vyhledat hru..."
+					class="bg-[#E2E5E9] w-[calc(100%-30px)] text-[#566576] pl-[10px] text-sm border-none outline-none">
+				<button class="w-[30px] h-[30px] bg-[#C4CCD4] flex items-center justify-center">
+					<img src="assets/images/icons/search.svg" alt="" class="w-[18px]">
+				</button>
 			</div>
 			<ul class="px-4 pt-6 pb-4">
 				<li class="py-2">
