--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<div class="body-wrapper relative z-0">
 		<div id="sidebar"
-			class="fixed top-0 bottom-0 right-0 bg-white text-[#2F3C4A] w-96 z-[999] h-screen translate-x-full transition-all duration-500 ease-in-out lg:hidden">
+			class="fixed top-0 bottom-0 right-0 bg-white text-[#2F3C4A] w-[310px] sm:w-[320px] z-[999] h-screen translate-x-full transition-all duration-500 ease-in-out lg:hidden">
 			<div class="flex items-center justify-between py-4 px-4 border-b border-[#2F3C4A]">
 				<div class="flex items-center gap-x-2">
 					<img src="assets/images/logo.svg" alt="" class="w-14 h-auto">
@@ -106,7 +106,7 @@
 				<div class="flex items-center justify-between">
 					<div class="flex items-center">
 						<a href="/"
-							class="flex justify-center items-center w-fit pt-3 lg:pt-[19px] xl:pt-[22px] 2xl:pt-[27px] pb-3 lg:pb-[18px] xl:pb-[20px] 2xl:pb-[25px] px-3 lg:px-3.5 xl:px-[18px] 2xl:px-[21px] absolute top-[-2px] lg:top-[-5px] 2xl:top-[-10px] bg-white left-[-6px] rotate-[5deg]">
+							class="flex justify-center items-center w-fit pt-3 lg:pt-[19px] xl:pt-[22px] 2xl:pt-[27px] pb-3 lg:pb-[18px] xl:pb-[20px] 2xl:pb-[25px] px-3 lg:px-3.5 xl:px-[18px] 2xl:px-[21px] absolute top-[-2px] lg:top-[-5px] 2xl:top-[-10px] bg-white left-[-3px] sm:left-[-6px] rotate-[5deg]">
 							<img src="assets/images/logo.svg" alt=""
 								class="w-[55px] lg:w-[70px] 2xl:w-[80px] xl:h-[70px] 2xl:h-[80px]">
 						</a>
@@ -721,7 +721,7 @@
 					<h6 class="uppercase text-sm xl:text-base text-[#C4CCD4] mb-[24px] text-center font-bold">Najdete nás i na
 						sociálních sítích
 					</h6>
-					<ul class="flex items-center gap-x-6 xl:gap-x-[30px] justify-center mb-8 xl:mb-[55px] 2xl:mb-[85px]">
+					<ul class="flex items-center gap-x-3 md:gap-x-6 xl:gap-x-[30px] justify-center mb-8 xl:mb-[55px] 2xl:mb-[85px]">
 						<li>
 							<a href="#">
 								<img src="assets/images/icons/youtube2.svg" alt="" class="w-[80px] h-auto">
@@ -740,7 +740,7 @@
 							</a>
 						</li>
 					</ul>
-					<ul class="flex items-center gap-x-1.5 justify-center">
+					<ul class="mb-1 flex items-center gap-x-1.5 justify-center">
 						<li>
 							<a href="#" class="text-[13px] font-light text-[#8A98A8]">Obchodní podmínky</a>
 						</li>
@@ -749,10 +749,11 @@
 							<a href="#" class="text-[13px] font-light text-[#8A98A8]">Reklamace</a>
 						</li>
 					</ul>
-					<ul class="flex items-center gap-x-1.5 justify-center mb-2.5">
-						<li class="text-[13px] font-light text-[#8A98A8]">© 2024 Rexhry|</li>
-						<li class="text-[13px] font-light text-[#8A98A8]">|</li>
-						<li class="text-[13px] font-light text-[#8A98A8]"> Vytvoril ExpertDev</li>
+					<ul class="flex-col sm:flex-row flex items-center gap-x-1.5 justify-center mb-2.5">
+						<li class="text-[13px] font-light text-[#8A98A8]">© 2024 Rexhry</li>
+						<li class="text-[13px] font-light text-[#8A98A8] hidden sm:block">|</li>
+						<li class="text-[13px] font-light text-[#8A98A8] "> Vytvoril ExpertDev</li>
+						<li class="text-[13px] font-light text-[#8A98A8] hidden sm:block">|</li>
 						<li class="text-[13px] font-light text-[#8A98A8]">Všechna práva vyhrazena</li>
 					</ul>
 				</div>
