--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Catalog</title>
 	<!-- Favicons -->
 	<link href="assets/images/favicone.png" rel="icon">
 	<!-- font aweasome -->
@@ -165,7 +165,7 @@
 							<ul class="flex items-center">
 								<li>
 									<a href="catalog.html"
-										class=" navlink flex justify-center text-[13px] 2xl:text-sm text-[#2F3C4A] font-black px-2 xl:px-4 pt-1 2xl:pt-2 pb-3.5 xl:pb-4 2xl:pb-6 hover:text-[#1D71C9] uppercase relative overflow-hidden border-r border-[#C4CCD4] after:content-[''] after:absolute after:bottom-[-15px] after:left-[calc(50%-7.5px)] after:w-[15px] after:h-[15px] after:bg-white after:border-[3px] after:border-[#1D71C9] after:rounded-[50%] after:transition-all hover:after:bottom-[-7px]">
+										class=" navlink flex justify-center text-[13px] 2xl:text-sm text-[#2F3C4A] font-black px-2 xl:px-4 pt-1 2xl:pt-2 pb-3.5 xl:pb-4 2xl:pb-6 hover:text-[#1D71C9] uppercase relative overflow-hidden border-r border-[#C4CCD4] after:content-[''] after:absolute after:bottom-[-15px] after:left-[calc(50%-7.5px)] after:w-[15px] after:h-[15px] after:bg-white after:border-[3px] after:border-[#1D71C9] after:rounded-[50%] after:transition-all hover:after:bottom-[-7px] active">
 										Katalog her
 									</a>
 								</li>
@@ -220,8 +220,8 @@
 				<div class="swiper-slide">
 					<div
 						class="pt-[215px] sm:pt-[240px] xl:pt-[250px] 2xl:pt-[310px] pb-[230px] sm:pb-[260px] xl:pb-[270px] 2xl:pb-[333px] bannerSlide bannerSlide1 relative z-0 overflow-hidden skew-bg-clip">
-						<div class="container">
-							<div class="max-w-[540px] mx-auto text-center ">
+						<div class="max-w-[540px] mx-auto text-center ">
+							<div class="container">
 								<h1
 									class="text-[30px] md:text-[40px] xl:text-[48px] 2xl:text-6xl text-[#2F3C4A] font-bold font-inknut-antiqua mb-2.5 leading-[1.1] uppercase">
 									Spící bohové
@@ -244,6 +244,7 @@
 										class="fa-solid fa-chevron-right btnIcn rotate-[40deg] translate-x-[40px] translate-y-[60px] transition-all duration-300 group-hover:rotate-0 group-hover:translate-x-0 group-hover:translate-y-[-2px]"></i>
 								</a>
 							</div>
+
 						</div>
 						<img src="assets/images/banner-icons-bg.svg" alt="" class="absolute bottom-[-60px] right-0 z-30 w-[160px]">
 					</div>
@@ -251,8 +252,8 @@
 				<div class="swiper-slide">
 					<div
 						class="pt-[215px] sm:pt-[240px] xl:pt-[250px] 2xl:pt-[310px] pb-[230px] sm:pb-[260px] xl:pb-[270px] 2xl:pb-[333px] bannerSlide bannerSlide1 relative z-0 overflow-hidden skew-bg-clip">
-						<div class="container">
-							<div class="max-w-[540px] mx-auto text-center ">
+						<div class="max-w-[540px] mx-auto text-center ">
+							<div class="container">
 								<h1
 									class="text-[30px] md:text-[40px] xl:text-[48px] 2xl:text-6xl text-[#2F3C4A] font-bold font-inknut-antiqua mb-2.5 leading-[1.1] uppercase">
 									Spící bohové
@@ -268,13 +269,14 @@
 									Vychází již
 									32. 12. 2025</p>
 								<a href="#"
-									class="flex items-center justify-center w-fit mx-auto rounded-[100px] px-6 md:px-8 xl:px-11 2xl:px-14 py-2.5 md:py-3 xl:py-4 2xl:py-5 bg-[#EC5C13] text-white uppercase text-sm xl:text-base 2xl:text-lg relative overflow-hidden hover:shadow-none gap-x-1 md:gap-x-1.5 group shadow-[0_4px_4px_0_#00000059] transition-all duration-300">
+									class="flex items-center justify-center w-fit mx-auto rounded-[100px] shadow-md px-6 md:px-8 xl:px-11 2xl:px-14 py-2.5 md:py-3 xl:py-4 2xl:py-5 bg-[#EC5C13] text-white uppercase text-sm xl:text-base 2xl:text-lg relative overflow-hidden hover:shadow-none gap-x-1 md:gap-x-1.5 group">
 									Dozvědět
 									se více
 									<i
 										class="fa-solid fa-chevron-right btnIcn rotate-[40deg] translate-x-[40px] translate-y-[60px] transition-all duration-300 group-hover:rotate-0 group-hover:translate-x-0 group-hover:translate-y-[-2px]"></i>
 								</a>
 							</div>
+
 						</div>
 						<img src="assets/images/banner-icons-bg.svg" alt="" class="absolute bottom-[-60px] right-0 z-30 w-[160px]">
 					</div>
