--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<div class="">
 							<img src="assets/images/logo-text.svg"
 								class="w-[80px] lg:w-[90px] xl:w-[100px] 2xl:w-[124px] h-auto mb-1.5" alt="">
-							<p class="color-secondary text-sm xl:text-base 2xl:text-[18px]">Královsky se bavte</p>
+							<p class="text-[#566576] text-sm xl:text-base 2xl:text-[18px]">Královsky se bavte</p>
 						</div>
 					</div>
 					<div class="navRight hidden lg:block">
@@ -227,7 +227,7 @@
 									Spící bohové
 								</h1>
 								<h6
-									class="color-secondary text-[22px] md:text-[26] xl:text-[32px] 2xl:text-[40px] font-medium mb-3 md:mb-5 xl:mb-6 2xl:mb-8 leading-[1.7] font-inknut-antiqua">
+									class="text-[#566576] text-[22px] md:text-[26] xl:text-[32px] 2xl:text-[40px] font-medium mb-3 md:mb-5 xl:mb-6 2xl:mb-8 leading-[1.7] font-inknut-antiqua">
 									Rozšíření:
 									říliv
 									zkázy
@@ -258,7 +258,7 @@
 									Spící bohové
 								</h1>
 								<h6
-									class="color-secondary text-[22px] md:text-[26] xl:text-[32px] 2xl:text-[40px] font-medium mb-3 md:mb-5 xl:mb-6 2xl:mb-8 leading-[1.7] font-inknut-antiqua">
+									class="text-[#566576] text-[22px] md:text-[26] xl:text-[32px] 2xl:text-[40px] font-medium mb-3 md:mb-5 xl:mb-6 2xl:mb-8 leading-[1.7] font-inknut-antiqua">
 									Rozšíření:
 									říliv
 									zkázy
@@ -297,7 +297,7 @@
 					class="text-[27px] xl:text-3xl 2xl:text-4xl font-bold text-[#2F3C4A] xl:leading-[1.7] 2xl:leading-[2] font-inknut-antiqua uppercase text-center">
 					Novinky</h2>
 				<p
-					class="text-xl xl:text-[24px] 2xl:text-[30px] font-medium color-secondary leading-[1.8] font-inknut-antiqua text-center mb-5">
+					class="text-xl xl:text-[24px] 2xl:text-[30px] font-medium text-[#566576] leading-[1.8] font-inknut-antiqua text-center mb-5">
 					Přinášíme
 					vám
 					zajímavé
@@ -686,7 +686,7 @@
 					</a>
 				</div>
 				<a href="#"
-					class="flex items-center text-[13px] xl:text-sm justify-center w-fit mx-auto rounded-[100px] shadow2 px-[24px] xl:px-[29px] py-[15px] xl:py-[18px] bg-[#1D71C9] text-white uppercase relative overflow-hidden hover:shadow-none gap-x-1.5 group">
+					class="flex items-center text-[13px] xl:text-sm justify-center w-fit mx-auto rounded-[100px] shadow2 px-[24px] xl:px-[29px] py-[15px] xl:py-[18px] bg-[#1D71C9] text-white uppercase relative overflow-hidden hover:shadow-none gap-x-1.5 group shadow-[0_3px_4px_0_#0000004D] transition-all duration-300">
 					Dozvědět
 					se více
 					<i
