--- a/complaint.html
+++ b/complaint.html
@@ -242,8 +242,9 @@
 						class="text-xl md:text-[26px] lg:text-3xl mb-6 md:mb-8 font-inknut-antiqua text-center leading-[1.5] text-color-quaternary font-medium">
 						Nebo je něco rozbité?
 					</h3>
-					<p class="text-base md:text-lg !leading-[2] text-center mb-6 lg:mb-11">
-						Vyplňte a odešlete náš formulář a my vše napravíme.Napište o jakou hru se týká, popište v čem je problém a
+					<p class="text-base md:text-lg !leading-[2] text-center mb-6 lg:mb-11 max-w-[600px]">
+						Vyplňte a odešlete náš formulář a my vše napravíme. <br> Napište o jakou hru se týká, popište v čem je
+						problém a
 						hlavně nezapomeňte přiložit dokumentační fotografie.
 					</p>
 					<div class="bg-[#F0F2F4] p-6 md:p-[30px]">
@@ -323,7 +324,13 @@
 			</div>
 		</section>
 		<footer class=" footer relative z-0">
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px]">
+			<a href="#" class="flex items-center gap-x-1.5 absolute right-7 md:hidden z-50">
+				<span class="font-extrabold text-xs">nahoru</span>
+				<div class="w-6 h-6 bg-[#E2E5E9] rounded-full flex items-center justify-center">
+					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
+				</div>
+			</a>
+			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
