--- a/up-comming.html
+++ b/up-comming.html
@@ -218,10 +218,10 @@
 					<div class="max-w-[725px] mx-auto text-center ">
 						<h1
 							class="text-2xl md:text-3xl xl:text-[40px] 2xl:text-[50px] text-white font-bold font-inknut-antiqua mb-2.5 leading-[30px] md:leading-[40px] xl:leading-[55px] 2xl:leading-[70px] uppercase">
-							O nás
+							Připravujeme
 						</h1>
 						<h6 class="text-[#C4CCD4] text-base md:text-xl xl:text-2xl 2xl:text-3xl font-inknut-antiqua">
-							Jsme malé vydavatelství z Brna
+							Přinášíme vám zajímavé deskovky v češtině
 						</h6>
 					</div>
 				</div>
@@ -655,11 +655,17 @@
 			</div>
 		</section>
 		<footer class=" footer relative z-0">
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px]">
+			<a href="#" class="flex items-center gap-x-1.5 absolute right-7 md:hidden z-50">
+				<span class="font-extrabold text-xs">nahoru</span>
+				<div class="w-6 h-6 bg-[#E2E5E9] rounded-full flex items-center justify-center">
+					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
+				</div>
+			</a>
+			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
-						class="text-center text-[#C4CCD4] uppercase mb-5 text-base md:text-lg xl:text-xl font-bold font-inknut-antiqua">
+						class="text-center text-color-tertiary uppercase mb-5 text-base md:text-lg xl:text-xl font-bold font-inknut-antiqua">
 						Kontakty</h2>
 					<ul class="flex items-center justify-center gap-x-5 xl:gap-x-[30px] mb-6">
 						<li class="flex items-center gap-x-1.5">
@@ -676,7 +682,8 @@
 							</a>
 						</li>
 					</ul>
-					<h6 class="uppercase text-sm xl:text-base text-[#C4CCD4] mb-[24px] text-center font-bold">Najdete nás i na
+					<h6 class="uppercase text-sm xl:text-base text-color-tertiary mb-[24px] text-center font-bold">Najdete nás i
+						na
 						sociálních sítích
 					</h6>
 					<ul
