--- a/about-us.html
+++ b/about-us.html
@@ -227,19 +227,19 @@
 				</div>
 			</div>
 			<img src="assets/images/about-icon1.png" alt=""
-				class="hidden md:block absolute md:-bottom-14 xl:-bottom-[43%] right-0 md:w-[10%] xl:w-[14.3%] z-30 ">
+				class="hidden md:block absolute md:-bottom-14 xl:-bottom-[35%] right-0 md:w-[10%] xl:w-[14.3%] z-30 ">
 			<img src="assets/images/icons/sub-banner-bg.svg" alt="" class="absolute bottom-0 left-0 z-10 w-[150px]">
 		</section>
 		<!-- banner end -->
 		<section class="relative z-0 pb-[170px] md:pb-24">
-			<img src="assets/images/about-icon2.png" alt="" class="w-[31%] min-w-[300px] absolute -bottom-16 -z-10">
+			<img src="assets/images/about-icon2.png" alt="" class="w-[28%] min-w-[300px] absolute -bottom-16 -z-10">
 			<div class="container">
 				<div class="mx-4  items-center pb-20">
 					<div class="grid grid-cols-1 md:grid-cols-2 gap-x-16 mb-14 gap-y-10 items-center">
 						<div class="w-full">
 							<img src="assets/images/about1.jpeg" alt="" class="w-full h-auto rotate-[5deg]">
 						</div>
-						<p class="text-sm md:text-base xl:text-xl leading-[1.9] ">
+						<p class="text-sm xl:text-[15px] !leading-[1.9] max-w-[600pc]">
 							Za značkou REXhry stojí skupina nadšených hráčů, kteří vybudovali úspěšný obchod s moderními společenskými
 							hrami PlanetaHer.cz. Naší snahou je přinášet na český trh nové zajímavé hry, které dle nás na trhu chybí.
 							Naší vizí je do budoucna vytvořit portfolio, které by uspokojilo náročné hráče i ty, kdo s hrami začínají
@@ -248,7 +248,7 @@
 						</p>
 					</div>
 					<div class="flex flex-col-reverse md:flex-row flex-wrap md:flex-nowrap justify-between gap-y-8 gap-x-16">
-						<p class="w-full md:w-1/2 text-sm md:text-base xl:text-xl leading-[1.9]">
+						<p class="w-full md:w-1/2 text-sm xl:text-[15px] !leading-[1.9] max-w-[600pc]">
 							Naše hry vybíráme tak, aby přinášely radost a rozvíjely kreativní myšlení. V našem portfoliu najdete
 							širokou
 							škálu her, od rodinných, přes strategické až po hry pro náročné hráče. Naše tým složený z talentovaných
@@ -369,8 +369,14 @@
 				</div>
 			</div>
 		</section>
-		<footer class=" footer relative z-0 bg-[#F0F2F4]">
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px]">
+		<footer class=" footer relative z-0">
+			<a href="#" class="flex items-center gap-x-1.5 absolute right-7 md:hidden z-50">
+				<span class="font-extrabold text-xs">nahoru</span>
+				<div class="w-6 h-6 bg-[#E2E5E9] rounded-full flex items-center justify-center">
+					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
+				</div>
+			</a>
+			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
