--- a/address.html
+++ b/address.html
@@ -215,7 +215,7 @@
 		<section class="relative z-0">
 			<div class="pt-24 md:pt-[203px] pb-20 md:pb-[180px] subBanner subBanner--address relative z-20">
 				<div class="container">
-					<div class="max-w-[725px] mx-auto text-center ">
+					<div class="max-w-[795px] mx-auto text-center ">
 						<h1
 							class="text-2xl md:text-3xl xl:text-[40px] 2xl:text-[50px] text-white font-bold font-inknut-antiqua mb-2.5 leading-[30px] md:leading-[40px] xl:leading-[55px] 2xl:leading-[70px] uppercase">
 							Pro obchodníky
@@ -347,7 +347,13 @@
 			</div>
 		</section>
 		<footer class=" footer relative z-0">
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px]">
+			<a href="#" class="flex items-center gap-x-1.5 absolute right-7 md:hidden z-50">
+				<span class="font-extrabold text-xs">nahoru</span>
+				<div class="w-6 h-6 bg-[#E2E5E9] rounded-full flex items-center justify-center">
+					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
+				</div>
+			</a>
+			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
