--- a/details3.html
+++ b/details3.html
@@ -1140,12 +1140,18 @@
 				</a>
 			</div>
 		</section>
-		<footer class="footer relative z-0">
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px]">
+		<footer class=" footer relative z-0">
+			<a href="#" class="flex items-center gap-x-1.5 absolute right-7 md:hidden z-50">
+				<span class="font-extrabold text-xs">nahoru</span>
+				<div class="w-6 h-6 bg-[#E2E5E9] rounded-full flex items-center justify-center">
+					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
+				</div>
+			</a>
+			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
-						class="text-center text-[#C4CCD4] uppercase mb-5 text-base md:text-lg xl:text-xl font-bold font-inknut-antiqua">
+						class="text-center text-color-tertiary uppercase mb-5 text-base md:text-lg xl:text-xl font-bold font-inknut-antiqua">
 						Kontakty</h2>
 					<ul class="flex items-center justify-center gap-x-5 xl:gap-x-[30px] mb-6">
 						<li class="flex items-center gap-x-1.5">
@@ -1162,7 +1168,8 @@
 							</a>
 						</li>
 					</ul>
-					<h6 class="uppercase text-sm xl:text-base text-[#C4CCD4] mb-[24px] text-center font-bold">Najdete nás i na
+					<h6 class="uppercase text-sm xl:text-base text-color-tertiary mb-[24px] text-center font-bold">Najdete nás i
+						na
 						sociálních sítích
 					</h6>
 					<ul
