--- a/catalog.html
+++ b/catalog.html
@@ -199,7 +199,7 @@
 								</li>
 								<li>
 									<a href="contact.html"
-										class=" navlink flex justify-center text-[13px] 2xl:text-sm text-color-primary font-black px-2 xl:px-4 pt-1 2xl:pt-2 pb-3.5 xl:pb-4 2xl:pb-6 hover:text-[#1D71C9] uppercase relative overflow-hidden border-r border-[#C4CCD4] after:content-[''] after:absolute after:bottom-[-15px] after:left-[calc(50%-7.5px)] after:w-[15px] after:h-[15px] after:bg-white after:border-[3px] after:border-[#1D71C9] after:rounded-[50%] after:transition-all hover:after:bottom-[-7px]">
+										class=" navlink flex justify-center text-[13px] 2xl:text-sm text-color-primary font-black px-2 xl:px-4 pt-1 2xl:pt-2 pb-3.5 xl:pb-4 2xl:pb-6 hover:text-[#1D71C9] uppercase relative overflow-hidden  after:content-[''] after:absolute after:bottom-[-15px] after:left-[calc(50%-7.5px)] after:w-[15px] after:h-[15px] after:bg-white after:border-[3px] after:border-[#1D71C9] after:rounded-[50%] after:transition-all hover:after:bottom-[-7px]">
 										Kontakt
 									</a>
 								</li>
