--- a/about-us.html
+++ b/about-us.html
@@ -239,7 +239,7 @@
 						<div class="w-full">
 							<img src="assets/images/about1.jpeg" alt="" class="w-full h-auto rotate-[5deg]">
 						</div>
-						<p class="text-sm xl:text-[15px] !leading-[1.9] max-w-[600pc]">
+						<p class="text-sm md:text-base xl:text-lg !leading-[1.9] max-w-[600pc]">
 							Za značkou REXhry stojí skupina nadšených hráčů, kteří vybudovali úspěšný obchod s moderními společenskými
 							hrami PlanetaHer.cz. Naší snahou je přinášet na český trh nové zajímavé hry, které dle nás na trhu chybí.
 							Naší vizí je do budoucna vytvořit portfolio, které by uspokojilo náročné hráče i ty, kdo s hrami začínají
@@ -248,7 +248,7 @@
 						</p>
 					</div>
 					<div class="flex flex-col-reverse md:flex-row flex-wrap md:flex-nowrap justify-between gap-y-8 gap-x-16">
-						<p class="w-full md:w-1/2 text-sm xl:text-[15px] !leading-[1.9] max-w-[600pc]">
+						<p class="w-full md:w-1/2 text-sm md:text-base xl:text-lg !leading-[1.9] max-w-[600pc]">
 							Naše hry vybíráme tak, aby přinášely radost a rozvíjely kreativní myšlení. V našem portfoliu najdete
 							širokou
 							škálu her, od rodinných, přes strategické až po hry pro náročné hráče. Naše tým složený z talentovaných
@@ -376,7 +376,8 @@
 					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
 				</div>
 			</a>
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
+			<img src="assets/images/footer-icons-bg.svg" alt=""
+				class="absolute md:-top-[85px] lg:-top-[92px] right-0 z-10 md:w-[215px] lg:w-[230px] xl:w-[239px] 2xl:w-[259px] h-auto md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
