--- a/details.html
+++ b/details.html
@@ -922,14 +922,15 @@
 				</div>
 			</div>
 		</section>
-		<footer class=" footer relative z-0">
+		<footer class=" footer relative z-0 bg-[#F0F2F4]">
 			<a href="#" class="flex items-center gap-x-1.5 absolute right-7 md:hidden z-50">
 				<span class="font-extrabold text-xs">nahoru</span>
 				<div class="w-6 h-6 bg-[#E2E5E9] rounded-full flex items-center justify-center">
 					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
 				</div>
 			</a>
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
+			<img src="assets/images/footer-icons-bg.svg" alt=""
+				class="absolute md:-top-[85px] lg:-top-[92px] right-0 z-10 md:w-[215px] lg:w-[230px] xl:w-[239px] 2xl:w-[259px] h-auto md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
