--- a/contact.html
+++ b/contact.html
@@ -227,6 +227,7 @@
 					</div>
 				</div>
 			</div>
+			<img src="assets/images/icons/sub-banner-bg.svg" alt="" class="absolute bottom-0 left-0 z-10 w-[150px]">
 		</section>
 		<!-- banner end -->
 		<section class="pb-20 md:pb-30 xl:pb-36 relative z-0">
@@ -307,7 +308,8 @@
 					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
 				</div>
 			</a>
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
+			<img src="assets/images/footer-icons-bg.svg" alt=""
+				class="absolute md:-top-[85px] lg:-top-[92px] right-0 z-10 md:w-[215px] lg:w-[230px] xl:w-[239px] 2xl:w-[259px] h-auto md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
