--- a/up-comming.html
+++ b/up-comming.html
@@ -331,7 +331,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#2F3C4A] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text1.svg" alt="" class="w-7 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Překládáme</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Překládáme</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -351,9 +351,7 @@
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
 								Kacíř: Zkáza Roanoke – kompletní herní + doplňky
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -375,7 +373,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#2F3C4A] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text1.svg" alt="" class="w-7 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Překládáme</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Překládáme</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -395,9 +393,7 @@
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
 								Kacíř: Zkáza Roanoke – kompletní herní + doplňky
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -419,7 +415,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#2F3C4A] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text1.svg" alt="" class="w-7 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Překládáme</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Překládáme</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -439,9 +435,7 @@
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
 								Kacíř: Zkáza Roanoke – kompletní herní + doplňky
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -463,7 +457,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#2A9B0D] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text2.svg" alt="" class="w-7 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Ve výrobě</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Ve výrobě</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -479,9 +473,7 @@
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
 								DUNA Imperium – povstání
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -503,7 +495,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#2A9B0D] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text2.svg" alt="" class="w-7 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Ve výrobě</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Ve výrobě</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -519,9 +511,7 @@
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
 								DUNA Imperium – povstání
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -543,7 +533,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#2A9B0D] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text2.svg" alt="" class="w-7 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Ve výrobě</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Ve výrobě</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -559,9 +549,7 @@
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
 								DUNA Imperium – povstání
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -583,7 +571,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#EC5C13] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text3.svg" alt="" class="w-7 h-8 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Na cestě</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Na cestě</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -592,16 +580,22 @@
 							<div class="flex gap-1 xl:gap-2.5 flex-wrap mb-3">
 								<div
 									class="text-white text-[8px] xl:text-[10px] font-extrabold bg-[#1D71C9] px-2.5 xl:px-[15px] py-1.5 xl:py-[9px] rounded-[40px] uppercase relative flex items-center w-fit leading-[1] transition-all duration-500">
+									Rodinné
+								</div>
+								<div
+									class="text-white text-[8px] xl:text-[10px] font-extrabold bg-[#1D71C9] px-2.5 xl:px-[15px] py-1.5 xl:py-[9px] rounded-[40px] uppercase relative flex items-center w-fit leading-[1] transition-all duration-500">
 									Pro náročné
+								</div>
+								<div
+									class="text-white text-[8px] xl:text-[10px] font-extrabold bg-[#1D71C9] px-2.5 xl:px-[15px] py-1.5 xl:py-[9px] rounded-[40px] uppercase relative flex items-center w-fit leading-[1] transition-all duration-500">
+									Párty
 								</div>
 							</div>
 							<h6
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
-								DUNA Imperium – povstání
+								Břink! V katakombách
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -623,7 +617,7 @@
 							<div
 								class="absolute py-2 lg:py-2.5 xl:py-3 gap-x-4 md:gap-x-5 xl:gap-x-7 w-full bottom-0 translate-x-[-50%] left-[50%] flex items-center justify-center bg-[#EC5C13] z-20 group-hover:w-[60%] transition-all duration-500 group-hover:rounded-[50px] group-hover:-translate-y-5 group-hover:-rotate-[5deg]">
 								<img src="assets/images/icons/up-comming/text3.svg" alt="" class="w-7 h-8 md:w-8 xl:w-9">
-								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold">Na cestě</p>
+								<p class="text-xs md:text-sm xl:text-base text-white font-extrabold uppercase">Na cestě</p>
 							</div>
 						</div>
 						<!-- card header end -->
@@ -632,16 +626,22 @@
 							<div class="flex gap-1 xl:gap-2.5 flex-wrap mb-3">
 								<div
 									class="text-white text-[8px] xl:text-[10px] font-extrabold bg-[#1D71C9] px-2.5 xl:px-[15px] py-1.5 xl:py-[9px] rounded-[40px] uppercase relative flex items-center w-fit leading-[1] transition-all duration-500">
+									Rodinné
+								</div>
+								<div
+									class="text-white text-[8px] xl:text-[10px] font-extrabold bg-[#1D71C9] px-2.5 xl:px-[15px] py-1.5 xl:py-[9px] rounded-[40px] uppercase relative flex items-center w-fit leading-[1] transition-all duration-500">
 									Pro náročné
+								</div>
+								<div
+									class="text-white text-[8px] xl:text-[10px] font-extrabold bg-[#1D71C9] px-2.5 xl:px-[15px] py-1.5 xl:py-[9px] rounded-[40px] uppercase relative flex items-center w-fit leading-[1] transition-all duration-500">
+									Párty
 								</div>
 							</div>
 							<h6
 								class="text-color-primary text-[13px] md:text-sm xl:text-base 2xl:text-[18px] font-extrabold mb-[6px] uppercase group-hover:text-[#1D71C9] transition-all duration-500 group-hover:mb-0">
-								DUNA Imperium – povstání
+								Břink! V katakombách
 							</h6>
-							<p
-								class="text-[11px] xl:text-[13px] font-semibold text-color-quaternary mb-1.5 xl:mb-2.5 transition-all duration-500 group-hover:mb-1 xl:group-hover:mb-1.5">
-								22. 6. 2024</p>
+
 							<p
 								class="text-[13px] md:text-sm xl:text-base leading-[25px] text-color-primary line-clamp-3 font-light transition-all duration-500 group-hover:leading-[23px]">
 								Duna: Impérium - Povstání je samostatně hratelná desková hra, která navazuje na populární hru Duna:
@@ -661,7 +661,8 @@
 					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
 				</div>
 			</a>
-			<img src="assets/images/footer-icons-bg.svg" alt="" class="absolute top-0 right-0 z-10 w-[150px] md:block hidden">
+			<img src="assets/images/footer-icons-bg.svg" alt=""
+				class="absolute md:-top-[85px] lg:-top-[92px] right-0 z-10 md:w-[215px] lg:w-[230px] xl:w-[239px] 2xl:w-[259px] h-auto md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
