--- a/complaint.html
+++ b/complaint.html
@@ -220,10 +220,10 @@
 					<div class="max-w-[725px] mx-auto text-center ">
 						<h1
 							class="text-2xl md:text-3xl xl:text-[40px] 2xl:text-[50px] text-white font-bold font-inknut-antiqua mb-2.5 leading-[30px] md:leading-[40px] xl:leading-[55px] 2xl:leading-[70px] uppercase">
-							Kontakty
+							Reklamace
 						</h1>
 						<h6 class="text-color-tertiary text-base md:text-xl xl:text-2xl 2xl:text-3xl font-inknut-antiqua">
-							Napište nám nebo zavolejte
+							Něco není v pořádku s vaší hrou? Napravíme to!
 						</h6>
 					</div>
 				</div>
