--- a/address.html
+++ b/address.html
@@ -260,7 +260,7 @@
 					<div class="bg-[#F0F2F4] p-6 md:p-10">
 						<h2
 							class="font-bold text-base md:text-lg lg:text-xl mb-3 md:mb-5 font-inknut-antiqua uppercase text-center leading-[1.5]">
-							Doplňující informace
+							Napište nám nebo volejte
 						</h2>
 						<p class="font-light text-[13px] md:text-sm lg:text-[15px] mb-5 text-center md:mb-8">
 							Pokud si chcete objednat naše hry pro váš obchod stačí když nám napíšete e-mail nebo zavoláte. Pokud jste
@@ -353,8 +353,6 @@
 					<img src="assets/images/Vector.svg" alt="" class="w-2.5 h-auto">
 				</div>
 			</a>
-			<img src="assets/images/footer-icons-bg.svg" alt=""
-				class="absolute md:-top-[85px] lg:-top-[92px] right-0 z-10 md:w-[215px] lg:w-[230px] xl:w-[239px] 2xl:w-[259px] h-auto md:block hidden">
 			<div class="footer-bg pt-[100px] lg:pt-[110px] 2xl:pt-[135px] pb-5 md:pb-[26px] relative z-20">
 				<div class="container">
 					<h2
