--- a/about-us.html
+++ b/about-us.html
@@ -218,10 +218,10 @@
 					<div class="max-w-[725px] mx-auto text-center ">
 						<h1
 							class="text-2xl md:text-3xl xl:text-[40px] 2xl:text-[50px] text-white font-bold font-inknut-antiqua mb-2.5 leading-[30px] md:leading-[40px] xl:leading-[55px] 2xl:leading-[70px] uppercase">
-							Novinky
+							O nás
 						</h1>
 						<h6 class="text-color-tertiary text-base md:text-xl xl:text-2xl 2xl:text-3xl font-inknut-antiqua">
-							Přinášíme vám zajímavé deskovky v češtině
+							Jsme malé vydavatelství z Brna
 						</h6>
 					</div>
 				</div>
